# AvlTree

./: AvlTree.cabal  CHANGELOG  CHANGELOG.md
.github/workflows/: haskell-ci.yml
Data/Tree/: AVL.hs  AVLX.hs
Data/Tree/AVL/: BinPath.hs  Delete.hs  Join.hs  List.hs  Push.hs  Read.hs  Set.hs  Size.hs  Split.hs  Types.hs  Write.hs  Zipper.hs
Data/Tree/AVL/Internals/: BinPath.hs  DelUtils.hs  HAVL.hs  HJoin.hs  HSet.hs  HeightUtils.hs
Data/Tree/AVL/Test/: AllTests.hs  Utils.hs
Test/: Test.hs
include/: ghcdefs.h  h98defs.h
src/Data/Tree/: AVL.hs
src/Data/Tree/AVL/: BinPath.hs  Delete.hs  Height.hs  Join.hs  List.hs  Push.hs  Read.hs  Set.hs  Size.hs  Split.hs  Utils.hs  Write.hs  Zipper.hs
src/Data/Tree/AVL/Internals/: DelUtils.hs  HAVL.hs  HJoin.hs  HPush.hs  HSet.hs  Types.hs
src/Data/Tree/AVL/Test/: Utils.hs
tests/: AllTests.hs  Utils.hs
