cabal-version:      2.2
name:               AvlTree
version:            4.3
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          (c) Adrian Hey 2004-2008
maintainer:         Bodigrim
author:             Adrian Hey
tested-with:
    ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.1 ghc ==9.0.2
    ghc ==9.2.8 ghc ==9.4.8 ghc ==9.6.7 ghc ==9.8.4 ghc ==9.10.3
    ghc ==9.12.2 ghc ==9.14.1

synopsis:           Balanced binary trees using the AVL algorithm.
description:
    A comprehensive and efficient implementation of AVL trees. The raw AVL
    API has been designed with efficiency and generality in mind, not elagance or
    safety. It contains all the stuff you really don't want to write yourself if you
    can avoid it. This library may be useful for rolling your own Sets, Maps, Sequences,
    Queues (for example).

category:           Data
build-type:         Simple
extra-source-files: include/ghcdefs.h
extra-doc-files:
    AUTHORS
    CHANGELOG.md
    MasterTable.txt

source-repository head
    type:     git
    location: https://github.com/Bodigrim/AvlTree.git

library
    exposed-modules:
        Data.Tree.AVL
        Data.Tree.AVL.Internals.Types

    hs-source-dirs:     src
    other-modules:
        Data.Tree.AVL.Write
        Data.Tree.AVL.Zipper
        Data.Tree.AVL.Delete
        Data.Tree.AVL.Join
        Data.Tree.AVL.List
        Data.Tree.AVL.Push
        Data.Tree.AVL.Internals.HAVL
        Data.Tree.AVL.Read
        Data.Tree.AVL.Set
        Data.Tree.AVL.Size
        Data.Tree.AVL.Height
        Data.Tree.AVL.Split
        Data.Tree.AVL.Utils
        Data.Tree.AVL.BinPath
        Data.Tree.AVL.Internals.DelUtils
        Data.Tree.AVL.Internals.HJoin
        Data.Tree.AVL.Internals.HPush
        Data.Tree.AVL.Internals.HSet
        Data.Tree.AVL.Test.Utils

    default-language:   Haskell2010
    default-extensions: CPP MagicHash UnboxedTuples
    include-dirs:       include
    ghc-options:        -Wall
    build-depends:
        base >=4.11 && <5,
        COrdering >=2.3 && <2.4

test-suite AvlTree-tests
    type:               exitcode-stdio-1.0
    main-is:            AllTests.hs
    hs-source-dirs:     tests
    other-modules:      Utils
    default-language:   Haskell2010
    default-extensions: CPP MagicHash UnboxedTuples
    include-dirs:       include
    ghc-options:        -Wall
    build-depends:
        base >=4.11 && <5,
        COrdering >=2.3 && <2.4,
        AvlTree
